[gd_scene load_steps=28 format=3 uid="uid://b0adrudgcfwkt"]

[ext_resource type="Script" uid="uid://dv1j1ay7er6v2" path="res://stickman/stickman.gd" id="1_4cfxp"]

[sub_resource type="Curve" id="Curve_jmdll"]
_data = [Vector2(0, 0.4), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_b51kg"]
_data = [Vector2(0, 0.3), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_svxu1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.7), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_novh3"]
_data = [Vector2(0, 0.3), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_4cfxp"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_novh3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("display/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("display/Torso:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, 0, -2, 8, -2, 14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("display/Back/BackArm:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(10, 12, 6, 8, 3, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("display/Front/FrontArm:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-10, 12, -10, 6, -3, -1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("display/Back/BackLeg:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(11, 30, 8, 30, 8, 20, 0, 14)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("display/Front/FrontLeg:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-14, 30, -12, 30, -8, 20, -4, 14)]
}

[sub_resource type="Animation" id="Animation_4cfxp"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("display/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("display/Torso:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(0, 0, -2, 8, -2, 14), PackedVector2Array(0, 4, -2, 8, -2, 16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("display/Back/BackArm:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(10, 12, 6, 8, 3, 0), PackedVector2Array(10, 14, 4, 12, 3, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("display/Front/FrontArm:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-10, 12, -10, 6, -3, -1), PackedVector2Array(-8, 14, -10, 8, -3, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("display/Back/BackLeg:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(10, 30, 8, 30, 8, 20, 0, 14), PackedVector2Array(10, 30, 8, 30, 8, 20, 0, 16)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("display/Front/FrontLeg:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-14, 30, -12, 30, -8, 20, -4, 14), PackedVector2Array(-14, 30, -12, 30, -8, 20, -4, 16)]
}

[sub_resource type="Animation" id="Animation_qlvw8"]
resource_name = "punch"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("display/Front/FrontLeg:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.70000005, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-17, 30, -15, 30, -13, 21, -4, 15), PackedVector2Array(-17, 30, -15, 30, -16, 21, -7, 14), PackedVector2Array(-17, 30, -15, 30, -16, 21, -7, 14), PackedVector2Array(-14, 31, -15, 29, -6, 21, 3, 14), PackedVector2Array(-14, 31, -15, 29, -5, 22, 2.9999995, 15), PackedVector2Array(-15, 31, -17, 31, -5, 22, 0, 15), PackedVector2Array(-14, 31, -18, 31, -8, 23, -6, 16), PackedVector2Array(-17, 30, -15, 30, -13, 21, -4, 15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("display/Back/BackLeg:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(8, 30, 7, 30, 5, 20, 0, 15), PackedVector2Array(9, 30, 7, 30, 4, 21, -1, 15), PackedVector2Array(9, 30, 7, 30, 4, 21, -1, 15), PackedVector2Array(10, 30, 7, 30, 13, 21, 7, 16), PackedVector2Array(10, 30, 7, 30, 13, 21, 7, 17), PackedVector2Array(10, 30, 7, 30, 10, 20, 4, 16), PackedVector2Array(7, 30, 5, 30, 2, 21, -3, 15), PackedVector2Array(8, 30, 7, 30, 5, 20, 0, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("display/Back/BackArm:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(11, 1, 5, 10, 3, 2), PackedVector2Array(17, 0, 8, 6, -1, 1), PackedVector2Array(17, 0, 8, 6, -1, 1), PackedVector2Array(0, 11, -1, 5, 10, 1), PackedVector2Array(0, 8, 0, -1, 10, 1), PackedVector2Array(4, 12, 0, 5, 7, 0), PackedVector2Array(-4, 15, -9, 9, -2, 0), PackedVector2Array(11, 1, 5, 10, 3, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("display/Front/FrontArm:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-9, 11, -12, 5, -3, -1), PackedVector2Array(-10, 9, -17, 6, -7, -1), PackedVector2Array(-10, 9, -17, 6, -7, -1), PackedVector2Array(38, 5, 30, 3, 17, 4), PackedVector2Array(30, 13, 29, 6, 18, 4), PackedVector2Array(21, 13, 22, 5, 15, 0), PackedVector2Array(8, 10, 3, 8, 1, 0), PackedVector2Array(-9, 11, -12, 5, -3, -1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("display/Torso:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(0, 0, -2, 7, -2, 14), PackedVector2Array(-3, 0, -4, 7, -4, 14), PackedVector2Array(-3, 0, -4, 7, -4, 14), PackedVector2Array(13, 4, 7, 7, 3, 14), PackedVector2Array(15, 4, 8, 8, 3, 15), PackedVector2Array(11, 1, 6, 6, 2, 14), PackedVector2Array(0, 1, -3, 7, -4, 14), PackedVector2Array(0, 0, -2, 7, -2, 14)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("display/Head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.7, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -3), Vector2(-5, -3), Vector2(-5, -3), Vector2(21, 4), Vector2(22, 8), Vector2(17, 4), Vector2(0, -1), Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_b51kg"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("display/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.59999996, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, -2), Vector2(6, 2), Vector2(6, 0), Vector2(6, -2), Vector2(6, -2), Vector2(6, 2), Vector2(6, 0), Vector2(4, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("display/Torso:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(2, 0, -2, 6, -2, 14), PackedVector2Array(4, 0, -2, 6, -4, 12), PackedVector2Array(2, 0, -2, 6, -2, 12), PackedVector2Array(2, -2, 0, 6, -2, 12), PackedVector2Array(2, -2, 0, 6, -2, 12), PackedVector2Array(4, 0, 0, 6, -2, 12), PackedVector2Array(3, 0, 0, 7, -2, 12), PackedVector2Array(0, 0, -2, 6, -2, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("display/Back/BackLeg:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.59999996, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-20, 20, -18, 18, -10, 22, -2, 14), PackedVector2Array(-8, 24, -8, 22, 2, 20, -4, 12), PackedVector2Array(14, 22, 12, 22, 8, 12, -2, 12), PackedVector2Array(14, 22, 12, 22, 12, 14, -2, 12), PackedVector2Array(10, 30, 8, 30, 8, 20, -2, 12), PackedVector2Array(-8, 30, -10, 30, -6, 20, -2, 12), PackedVector2Array(-16, 30, -18, 28, -10, 20, -2, 12), PackedVector2Array(-22, 22, -22, 20, -14, 20, -2, 12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("display/Front/FrontLeg:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(12, 30, 10, 30, 10, 20, 0, 14), PackedVector2Array(-2, 30, -4, 30, 2, 20, -4, 12), PackedVector2Array(-18, 30, -20, 28, -12, 20, -4, 12), PackedVector2Array(-20, 20, -18, 18, -12, 18, -4, 12), PackedVector2Array(-20, 18, -18, 16, -10, 20, -2, 12), PackedVector2Array(-8, 22, -8, 20, 8, 18, -2, 12), PackedVector2Array(14, 20.000002, 12, 20.000002, 12, 10.000001, 0, 12), PackedVector2Array(14, 24.000006, 12, 24.000006, 10, 16, 0, 12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("display/Back/BackArm:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-12, 10, -8, 2, 2, 0), PackedVector2Array(4, 12, -2, 8, 4, 0), PackedVector2Array(13, 8, 6, 6, 2, 0), PackedVector2Array(18, -2, 10, 4, 2, -2), PackedVector2Array(14, 6, 7, 6, 2, -1.6), PackedVector2Array(2, 12, -4, 6, 4, 0), PackedVector2Array(-12, 9.999996, -8, 3.9999971, 3, 0), PackedVector2Array(-14, 2, -8, -2, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("display/Front/FrontArm:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(12, 8, 2, 8, 4, 0), PackedVector2Array(0, 14, -6, 8, 4, 0), PackedVector2Array(-12, 12, -10, 4, 0, 0), PackedVector2Array(-14, 0, -8, -4, 0, -2), PackedVector2Array(-12, 6, -8, 0, 0, -2), PackedVector2Array(-3.999998, 12, -7.999998, 6.000001, 4, 0), PackedVector2Array(10, 11.999993, 2.000002, 9.999998, 3, 0), PackedVector2Array(12, -1.9999981, 5.999999, 6.0000005, 2, 0)]
}

[sub_resource type="Animation" id="Animation_iu0mg"]
resource_name = "up"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("display/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("display/Torso:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, 0, 0, 5, 0, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("display/Front/FrontLeg:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-10, 27, -10, 25, -5, 18, -1, 12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("display/Back/BackLeg:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(1, 25, 1, 23, 10, 15, 1, 12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("display/Back/BackArm:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(13, 9, 9, 4, 3, -2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("display/Front/FrontArm:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-11, 12, -11, 3, -4, -2)]
}

[sub_resource type="Animation" id="Animation_xlwhs"]
resource_name = "down"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("display/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -3), Vector2(1, -3), Vector2(-1, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("display/Torso:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04999999, 0.09999999, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(0, 0, 0, 5, 0, 12), PackedVector2Array(1, -1, 0, 4, 0, 10), PackedVector2Array(1, -1, -1, 4, 0, 9), PackedVector2Array(1, -1, -1, 3, 0, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("display/Front/FrontLeg:points")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.04999999, 0.09999999, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-10, 27, -10, 25, -5, 18, -1, 12), PackedVector2Array(-4, 22, -3, 20, 5, 14, -2, 10), PackedVector2Array(2, 21, 1, 20, 7, 10, -1, 9), PackedVector2Array(1, 29, -1, 27, 0, 14, 0, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("display/Back/BackLeg:points")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.04999999, 0.09999999, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(1, 25, 1, 23, 10, 15, 1, 12), PackedVector2Array(2, 20, 2, 18, 11, 13, 2, 10), PackedVector2Array(7, 17, 6, 16, 12, 8, 3, 7), PackedVector2Array(6, 16, 5, 15, 10, 5, 3, 7)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("display/Back/BackArm:points")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.04999999, 0.09999999, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(13, 9, 9, 4, 3, -2), PackedVector2Array(13, 4, 10, -2, 3, -2), PackedVector2Array(15, -1, 10, -6, 4, -2), PackedVector2Array(15, -6, 9, -6, 4, -2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("display/Front/FrontArm:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.04999999, 0.09999999, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [PackedVector2Array(-11, 12, -11, 3, -4, -2), PackedVector2Array(-8, 8, -12, 2, -3, -3), PackedVector2Array(-15, -2, -7, -6, -3, -3), PackedVector2Array(-17, -3, -9, -7, -3, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b51kg"]
_data = {
&"RESET": SubResource("Animation_novh3"),
&"down": SubResource("Animation_xlwhs"),
&"idle": SubResource("Animation_4cfxp"),
&"punch": SubResource("Animation_qlvw8"),
&"run": SubResource("Animation_b51kg"),
&"up": SubResource("Animation_iu0mg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kgv80"]
animation = &"down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iu0mg"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ib2ok"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lke8o"]
animation = &"up"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xfygg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_inwbe"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsqnk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8xr5o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qlvw8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eayeq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_axgte"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kgv80"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dnb3y"]
states/End/position = Vector2(560, 100)
states/down/node = SubResource("AnimationNodeAnimation_kgv80")
states/down/position = Vector2(299, 203)
states/idle/node = SubResource("AnimationNodeAnimation_iu0mg")
states/idle/position = Vector2(299, 100)
states/run/node = SubResource("AnimationNodeAnimation_ib2ok")
states/run/position = Vector2(433, 100)
states/up/node = SubResource("AnimationNodeAnimation_lke8o")
states/up/position = Vector2(433, 203)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_xfygg"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_inwbe"), "idle", "up", SubResource("AnimationNodeStateMachineTransition_bsqnk"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_8xr5o"), "run", "End", SubResource("AnimationNodeStateMachineTransition_qlvw8"), "up", "down", SubResource("AnimationNodeStateMachineTransition_eayeq"), "down", "idle", SubResource("AnimationNodeStateMachineTransition_axgte"), "run", "up", SubResource("AnimationNodeStateMachineTransition_kgv80")]
graph_offset = Vector2(-24, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu0mg"]
size = Vector2(20, 48)

[node name="Stickman" type="CharacterBody2D"]
script = ExtResource("1_4cfxp")
speed = 200
jump_speed = -400
gravity = 1000
color = Color(0.64705884, 0.1882353, 0.1882353, 1)

[node name="display" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Head" type="Polygon2D" parent="display"]
unique_name_in_owner = true
position = Vector2(0, -2)
color = Color(0.37254903, 0.8039216, 0.89411765, 1)
polygon = PackedVector2Array(-4, -11, -1, -14, 3, -14, 6, -11, 6, -7, 3, -4, -1, -4, -4, -7)

[node name="Back" type="Node2D" parent="display"]

[node name="BackArm" type="Line2D" parent="display/Back"]
unique_name_in_owner = true
points = PackedVector2Array(10, 12, 6, 8, 3, 0)
width = 6.0
width_curve = SubResource("Curve_jmdll")
default_color = Color(0.6862745, 0.101960786, 0.69803923, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="BackLeg" type="Line2D" parent="display/Back"]
unique_name_in_owner = true
points = PackedVector2Array(11, 30, 8, 30, 8, 20, 0, 14)
width = 7.0
width_curve = SubResource("Curve_b51kg")
default_color = Color(0.9843137, 0.9490196, 0.21176471, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="Torso" type="Line2D" parent="display"]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, -2, 8, -2, 14)
width_curve = SubResource("Curve_svxu1")
default_color = Color(0.8745098, 0.44313726, 0.14901961, 1)
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="Front" type="Node2D" parent="display"]

[node name="FrontLeg" type="Line2D" parent="display/Front"]
unique_name_in_owner = true
points = PackedVector2Array(-14, 30, -12, 30, -8, 20, -4, 14)
width = 7.0
width_curve = SubResource("Curve_novh3")
default_color = Color(0.6745098, 0.19607843, 0.19607843, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="FrontArm" type="Line2D" parent="display/Front"]
unique_name_in_owner = true
points = PackedVector2Array(-10, 12, -10, 6, -3, -1)
width = 6.0
width_curve = SubResource("Curve_4cfxp")
default_color = Color(0.6, 0.8980392, 0.3137255, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="display"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_b51kg")
}
autoplay = "RESET"
speed_scale = 1.5

[node name="AnimationTree" type="AnimationTree" parent="display"]
unique_name_in_owner = true
active = false
root_node = NodePath("%display/..")
tree_root = SubResource("AnimationNodeStateMachine_dnb3y")
anim_player = NodePath("../AnimationPlayer")

[node name="Floor" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-54, 32, 48, 32)
width = 2.0
default_color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_iu0mg")
